feat: support global authentication
